Problemi crezione griglia

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div>
                 <span> Difficoltà: </span>
-                <select class="pe-5 style=width: 200px; name=" id="scelte">
+                <select class="pe-5 name=" id="scelte">
                     <option value="Facile"> Easy </option>
                     <option value="Normale"> Normal </option>
                     <option value="Leggenda"> Legend </option>
@@ -33,12 +33,16 @@
 
     <main>
 
+        <div id="grid" class="container d-flex flex-wrap">
+
+        </div>
+
     </main>
 
-    <footer class="d-flex align-items-center"> 
+    <footer class="d-flex align-items-center">
         <div class="container d-flex justify-content-between">
             <div>
-                <span >Made whit <i class="fa-solid fa-heart"></i> by <a href="#">Boolean</a>   </span>
+                <span>Made whit <i class="fa-solid fa-heart"></i> by <a href="#">Boolean</a> </span>
             </div>
             <div>
                 <p></p>
