--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="d-flex align-items-center">
         <div class="container d-flex justify-content-around">
             <div>
-                <img class="img-fluid dimensione" src="./No bonus/asset/logo-small.png" alt="logo">
+                <img class="img-fluid" src="./No bonus/asset/logo-small.png" alt="logo">
             </div>
 
             <div>
@@ -33,7 +33,7 @@
 
     <main>
 
-        <div id="grid" class="container d-flex flex-wrap">
+        <div id="grid" class="container box d-flex flex-wrap">
 
         </div>
 
