--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
 
-        <div id="grid" class="container box d-flex flex-wrap">
+        <div id="grid" class="container bordi d-flex flex-wrap">
 
         </div>
 
