--- a/index.html
+++ b/index.html
@@ -1,56 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./No bonus/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Campo Fiorito</title>
+    <title>Griglia Campo Minato</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./asset/style.css">
+
 </head>
-
 <body>
-    <header class="d-flex align-items-center">
-        <div class="container d-flex justify-content-around">
-            <div>
-                <img class="img-fluid" src="./No bonus/asset/logo-small.png" alt="logo">
-            </div>
 
-            <div>
-                <span> Difficoltà: </span>
-                <select class="pe-5 name=" id="scelte">
-                    <option value="Facile"> Easy </option>
-                    <option value="Normale"> Normal </option>
-                    <option value="Leggenda"> Legend </option>
-                </select>
-                <button class="rounded text-center px-5" id="btn"> Play </button>
-            </div>
-        </div>
-    </header>
+    <h1>Campo Minato</h1>
+    
+    <div id="grid" class="bg_container">
 
-    <main>
+    </div>
 
-        <div id="grid" class="container bordi d-flex flex-wrap">
-
-        </div>
-
-    </main>
-
-    <footer class="d-flex align-items-center">
-        <div class="container d-flex justify-content-between">
-            <div>
-                <span>Made whit <i class="fa-solid fa-heart"></i> by <a href="#">Boolean</a> </span>
-            </div>
-            <div>
-                <p></p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="./No bonus/main.js"></script>
+    <script type="text/javascript" src="./asset/main.js" ></script>
+    
 </body>
-
 </html>
